# projects/automat-api/src/API/models/valid-qr-code-dto.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ValidQrCodeDto {
+  itemId?: number;
+  valid?: boolean;
+}
